--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                 <div class="project" data-aos="fade-up">
                     <h3>Detwins RealEstate</h3>
                     <div class="language">
-                        <span>Next.js</span>
-                        <span>Chakra ui</span>
+                        <span>Next.js  || Chakra ui</span>
                     </div>
                     <br>
                     <p>
@@ -238,9 +237,7 @@
                 <div class="project" data-aos="fade-up">
                     <h3>Larry Fashion</h3>
                     <div class="language">
-                        <span>Javascript</span>
-                        <span>Css</span>
-                        <span>Html</span>
+                        <span>Javascript || Css || Html</span>
                     </div>
                     <br>
                     <p>
@@ -266,8 +263,7 @@
                 <div class="project" data-aos="fade-up">
                     <h3>Task Tracker</h3>
                     <div class="language">
-                        <span>React</span>
-                        <span>Css</span>
+                        <span>React  ||  Css</span>
                     </div>
                     <br>
                     <p>
@@ -292,9 +288,7 @@
                 <div class="project" data-aos="fade-up">
                     <h3>Estimator</h3>
                     <div class="language">
-                        <span>Javascript</span>
-                        <span>Css</span>
-                        <span>Html</span>
+                        <span>Javascript  || Css || Html</span>
                     </div>
                     <br>
                     <p>
