--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
                             <div class="line"></div>
                         </div>
                         <br>
-                        <h4>I Am A Creative Web Designer And Web Developer</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ex nobis quasi nihil porro labore autem ducimus, a excepturi minima. Lorem, ipsum dolor sit amet consectetur adipisicing.
-                        </p>
+                        <h4>I Am A Creative Web Designer And Frontend Web Developer</h4>
+                        <p>I build and bring out new strategies on websites and webdesigns for great user experience and best user interface for easy usage and very concise for client's best choice with my technical and professional skills. </p>
                     </div>
                     <br>
                     <div class="skills" data-aos="fade-up">
