--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
            
             <div class="about_content">
                 <div class="vid-box">
-                    <video src="./images/animated_medium20210805-10721-o4d0qh.mp4" autoplay="autoplay" muted></video>
+                    <video src="./images/animated_medium20210805-10721-o4d0qh.mp4" autoplay="autoplay" muted loop></video>
                 </div>
                 <div class="content">
                     <div class="text" data-aos="fade-up">
@@ -195,7 +195,7 @@
                 <div data-aos="fade-left">
                     <span><ion-icon name="laptop-outline"></ion-icon></span>
                     <h3>Websites</h3>
-                    <p>I builds outstanding websites for iindividuals and companies with a friendly and user experience interface for cuctomers/user satisfation .</p>
+                    <p>I builds outstanding websites for individuals and companies with a friendly and user experience interface for customers/users satisfaction .</p>
                 </div>
 
             </div>
@@ -266,7 +266,7 @@
                     </div>
                     <br>
                     <p>
-                        Task Tracker is an app thats helps you set your daily activities . And also a reminder button to keep track of it.
+                        Task Tracker is an app that helps you set your daily activities . And also a reminder button to keep track of it.
                     </p>
                     <div class="btn">
                         <button>
