--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <br>
                 <br>
                 <p class="max">
-                    Detwins Innvation is the best place for your designs ,websites , best User experience and many more. 
+                    Detwins Innovations is the best place for your designs ,websites , best User experience and many more. 
                 </p>
                 <br>
                 <button><a href="#contact">CONTACT ME</a></button>
