--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
            }
            form.addEventListener('submit', sendEmail)
    </script>
+  <script src="https://kit.fontawesome.com/2c348bb9ab.js" crossorigin="anonymous"></script>
 
     <script src="./script/portfolio.js"></script>
 </body>
