--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             </span>
                         </p>
                         <br>
-                        <button><a href="./images/CV_2022-04-16-024821.pdf">Download CV</a></button>
+                        <button><a href="./images/OGODO SYLVESTER NNAMDI.pdf">Download CV</a></button>
                     </div>
                 </div>
             </div>
